@@ -389,11 +389,12 @@
                 <configuration>
 					<skip>false</skip>
 					<systemPropertyVariables>
-						<es.caib.notib.properties.path>src/test/resources/es/caib/notib/core/test.properties</es.caib.notib.properties.path>
+						<es.caib.notib.properties.path>src/test/resources/es/caib/notib/logic/test.properties</es.caib.notib.properties.path>
 					</systemPropertyVariables>
-					<argLine>-XX:MaxPermSize=512m</argLine>
+					<argLine>-XX:MaxMetaspaceSize=512m --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 				</configuration>
             </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
